@@ -57,3 +57,20 @@ If the document being saved is a new document (i.e. it has not yet been
 persisted to the database), then the ``:touch`` option will be ignored, and the
 ``updated_at`` (and ``created_at``) fields will be updated with the current
 time.
+
+
+Added Version Based Default Configuration
+-----------------------------------------
+
+Mongoid 8.1 has added the ability to set the default configurations for a
+specific version:
+
+.. code:: ruby
+
+  Mongoid.configure do |config|
+    config.load_defaults 8.0
+  end
+
+This is helpful for upgrading between versions. See the section on
+:ref:`Version Based Default Configuration <load-defaults>` for more details on
+how to use this feature to make upgrading between Mongoid versions easier.
