@@ -9,6 +9,7 @@ Release Notes
 .. toctree::
   :titlesonly:
 
+  release-notes/mongoid-8.1
   release-notes/mongoid-8.0
   release-notes/mongoid-7.5
   release-notes/mongoid-7.4
